<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--  This is our one standard application action (creating a new note). -->

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_note_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_note_add"
          android:title="@string/menu_add"
          android:alphabeticShortcut='a'
          android:showAsAction="always" />

    <!--  If there is currently data in the clipboard, this adds a PASTE menu item to the menu
          so that the user can paste in the data.. -->

    <item
        android:id="@+id/menu_reload"
        android:alphabeticShortcut='p'
        android:icon="@drawable/ic_menu_compose"
        android:title="@string/menu_reload" />
    <item
        android:id="@+id/menu_filter_by_color"
        android:title="@string/menu_filter_by_color"
        android:showAsAction="ifRoom"/>


    <item android:id="@+id/menu_paste"
          android:icon="@drawable/ic_menu_compose"
          android:title="@string/menu_paste" />

</menu>